<resources>
    <string name="app_name">OctoDroid</string>
    <string name="welcome">Welcome to OctoDroid</string>
    <string name="introduction">To be able to use the app to its full potential, please log in to GitHub using the button below.\n\nAlternatively, you can explore some parts of GitHub using the swipe-out menu on the left.</string>
    <string name="repo_not_found_toast">Repository was not found</string>
    <string name="loading_msg">Loading\u2026</string>
    <string name="saving_msg">Saving\u2026</string>
    <string name="deleting_msg">Deleting\u2026</string>
    <string name="closing_msg">Closing\u2026</string>
    <string name="opening_msg">Opening\u2026</string>
    <string name="merging_msg">Merging\u2026</string>
    <string name="authenticating">Authenticating\u2026</string>
    <string name="search">Search</string>
    <string name="search_code">Search code</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="try_again">Try again</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="retry">Retry</string>
    <string name="open_source_components">Open source components</string>
    <string name="my_profile">My profile</string>
    <string name="add_account">Add account</string>
    <string name="my_email">slapperwan@gmail.com</string>
    <string name="my_web">http://slapperwan.github.com/gh4a</string>
    <string name="my_username">slapperwan</string>
    <string name="my_repo">gh4a</string>
    <string name="feedback_text">If you have any issues or suggestions, please contact me.  Any kind of feedback is greatly appreciated.</string>
    <string name="feedback_by_email">By Email</string>
    <string name="feedback_by_gh4a">By OctoDroid</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="other_info">Other Information</string>
    <string name="view">View</string>
    <string name="readme">Readme</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="reply">Reply</string>
    <string name="add_comment">Add comment</string>
    <string name="edit">Edit</string>
    <string name="members">Members</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="merged">Merged</string>
    <string name="theme">Theme</string>
    <string name="pub_timeline">Public Timeline</string>
    <string name="load_failure_explanation">Loading the data from Github failed. Please verify you have a working network connection and try again.</string>
    <string name="share">Share</string>
    <string name="print">Print</string>
    <string name="downloads">Downloads</string>
    <string name="releases">Releases</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="no_browser_found">The link could not be opened: no browser was found on your device</string>
    <string name="wrap_lines">Wrap lines</string>
    <string name="unknown">unknown</string>
    <string name="history">History</string>
    <string name="deleted">(deleted)</string>
    <string name="go_to">Go to</string>
    <string name="forked_from">forked from %1$s</string>
    <string name="enter_username_toast">Please enter your user name instead of your email address</string>
    <string name="menu_user">User %1$s</string>
    <string name="menu_repo">Repo %1$s</string>
    <string name="menu_compare">Compare %1$s</string>
    <string name="menu_commit">Commit %1$s</string>
    <string name="menu_issue">Issue %1$d</string>
    <string name="menu_gist">Gist %1$s</string>
    <string name="menu_file">File %1$s</string>
    <string name="menu_fork">Forked repo %1$s</string>
    <string name="menu_wiki">Wiki in browser</string>
    <string name="menu_pull">Pull request %1$d</string>
    <string name="menu_issues">Open issues</string>
    <string name="delete_comment_message">Delete this comment?</string>
    <string name="saving_comment">Saving comment\u2026</string>
    <string name="please_wait">Please wait</string>
    <string name="bookmark_user">Bookmark user</string>
    <string name="bookmark_repo">Bookmark repo</string>
    <string name="ellipse" translatable="false">\u2026</string>
    <string name="view_more">View more\u2026</string>
    <string name="pulls">Pulls</string>
    <string name="issue_milestone_hint">Milestone</string>
    <string name="issue_assignee_hint">Assignees</string>
    <string name="link_not_openable">Link could not be opened</string>
    <string name="download_created">Created %1$s</string>
    <string name="download_mobile_warning_title">Mobile connection download</string>
    <string name="download_mobile_warning_message">Do you want to download this file using your mobile connection?\nYou can also schedule it for download when you\'re using your Wi-Fi connection next time.</string>
    <string name="download_now_button">Download now</string>
    <string name="download_wifi_button">Download over Wi-Fi</string>
    <string name="download_permission_rationale">Permission to write to USB storage or SD card is required in order to download files.</string>
    <string name="load_auth_failure_notice">Your authentication credentials aren\'t valid anymore, please log in again.</string>
	<string name="auth_code">Authentication Code</string>
	<string name="two_factor_auth">Two-factor Authentication</string>
	<string name="verify">Verify</string>
    <string name="unset">Unset</string>
    <string name="logout_pref_summary_logged_in">Currently logged in as %1$s</string>
    <string name="logout_pref_summary_logged_out">Currently not logged in</string>
    <string name="copyright_notice">\u00a9 2014 Azwan Adli, Danny Baumann</string>
    <string name="actions">Actions</string>
    <string name="created">Created</string>
    <string name="assigned">Assigned</string>
    <string name="mentioned">Mentioned</string>
    <string name="participating">Participating</string>
    <string name="my_repositories">My repositories</string>
    <string name="starred_repositories">Starred repositories</string>
    <string name="my_issues">My issues</string>
    <string name="my_pull_requests">My pull requests</string>
    <string name="my_gists">My gists</string>
    <string name="start_page">Start page</string>
    <string name="start_page_last_selected">Last selected</string>
    <string name="login_failed">Login failed.</string>
    <string name="comment_editor_locked_hint">Comments are only available to collaborators</string>
    <string name="org_user_template">%1$s (organization)</string>
    <string name="clear_suggestions">Clear suggestions</string>
    <string name="quote">Quote</string>
    <string name="fork">Fork</string>
    <string name="notifications">Notifications</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="mark_repository_as_read_question">Mark all notifications from %1$s as read?</string>
    <string name="mark_all_as_read_question">Mark all notifications as read?</string>
    <string name="browser_logout_dialog_title">Logout in browser required</string>
    <string name="browser_logout_dialog_text">As the login process is done in your browser and only one account can be active at a time there, you need to make sure to be logged out from Github in your browser before being able to log in to a new account.\n\nPlease visit Github\'s logout page, finish the logout process, then close the browser window, come back to the app and continue the login process.\nIf you\'re sure you\'re not logged in, you can also continue to the login process right away.</string>
    <string name="browser_logout_completed_dialog_text">You can now proceed in the login process for the new account.</string>
    <string name="go_to_logout_page">Go to logout page</string>
    <string name="continue_login">Continue new login</string>
    <plurals name="contributor_extra_data">
        <item quantity="one">%1$d contribution</item>
        <item quantity="other">%1$d contributions</item>
    </plurals>
    <string name="repo_type_all">All</string>
    <string name="repo_type_owner">Owner</string>
    <string name="repo_type_member">Member</string>
    <string name="repo_type_public">Public</string>
    <string name="repo_type_private">Private</string>
    <string name="repo_type_sources">Sources</string>
    <string name="repo_type_forks">Forks</string>
    <string name="repo_type_watched">Watched</string>
    <string name="repo_type_starred">Starred</string>
    <string name="repo_filter">Filter</string>
    <string name="repo_sort">Sort order</string>
    <string name="repo_sort_order_name_asc">By name (A-Z)</string>
    <string name="repo_sort_order_name_desc">By name (Z-A)</string>
    <string name="repo_sort_order_creation_desc">Newest</string>
    <string name="repo_sort_order_creation_asc">Oldest</string>
    <string name="repo_sort_order_pushed_desc">Most recently pushed</string>
    <string name="repo_sort_order_pushed_asc">Least recently pushed</string>
    <string name="no_blogs_found">No blogs found.</string>
    <string name="no_comments_found">Nobody has commented so far.</string>
    <string name="no_files_found">No files found.</string>
    <string name="no_trends_found">No trending repositories found.</string>
    <string name="no_downloads_found">This repository doesn\'t provide any downloads.</string>
    <string name="no_open_milestones_found">This repository doesn\'t have any open milestones.</string>
    <string name="no_closed_milestones_found">This repository doesn\'t have any closed milestones.</string>
    <string name="no_commits_found">No commits found.</string>
    <string name="no_followers_found">No followers found.</string>
    <string name="no_following_found">No users are followed so far.</string>
    <string name="no_forks_found">This repository wasn\'t forked yet.</string>
    <string name="no_issues_found">No issues were reported so far.</string>
    <string name="no_search_issues_found">No issues found matching the criteria.</string>
    <string name="no_search_pull_requests_found">No pull requests found matching the criteria.</string>
    <string name="no_events_found">No events found.</string>
    <string name="no_pull_requests_found">No pull requests were opened so far.</string>
    <string name="no_repos_found">No repositories found.</string>
    <string name="user_news_feed">News Feed</string>
    <string name="issue_title">Title</string>
    <string name="issue_body">Body</string>
    <string name="issue_create">New Issue</string>
    <string name="issue_sort_order">Sort order</string>
    <string name="issue_sort_created_asc">Oldest</string>
    <string name="issue_sort_created_desc">Newest</string>
    <string name="issue_sort_updated_asc">Least recently updated</string>
    <string name="issue_sort_updated_desc">Most recently updated</string>
    <string name="issue_sort_comments_asc">Least commented</string>
    <string name="issue_sort_comments_desc">Most commented</string>
    <string name="issue_manage_labels">Manage Labels</string>
    <string name="issue_manage_milestones">Manage Milestones</string>
    <string name="issue_filter">Filter</string>
    <string name="issue_filter_by_labels">Filter by labels</string>
    <string name="issue_filter_by_milestone">Filter by milestone</string>
    <string name="issue_filter_by_assignee">Filter by assignee</string>
    <string name="issue_filter_by_participating">Filter by participating status</string>
    <string name="trend">Trending Repos</string>
    <string name="trend_today">Today</string>
    <string name="trend_week">Week</string>
    <string name="trend_month">Month</string>
    <string name="blog">GitHub Blog</string>
</resources>