<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/my_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/news_feed"
            android:title="@string/user_news_feed"
            android:icon="@drawable/icon_news_feed"
            android:checked="true" />
        <item
            android:id="@+id/notifications"
            android:title="@string/notifications"
            android:icon="@drawable/icon_notifications"
            android:checked="false" />
        <item
            android:id="@+id/my_repos"
            android:title="@string/my_repositories"
            android:icon="@drawable/icon_repositories"/>
        <item
            android:id="@+id/my_issues"
            android:title="@string/my_issues"
            android:icon="@drawable/icon_issues"/>
        <item
            android:id="@+id/my_prs"
            android:title="@string/my_pull_requests"
            android:icon="@drawable/icon_pull_request"/>
        <item
            android:id="@+id/my_gists"
            android:title="@string/my_gists"
            android:icon="@drawable/icon_gists"/>
    </group>
    <item android:title="@string/navigation">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/search"
                    android:title="@string/search"
                    android:checkable="false"
                    android:icon="@drawable/icon_search"/>
                <item
                    android:id="@+id/bookmarks"
                    android:title="@string/bookmarks"
                    android:icon="@drawable/icon_bookmark" />
            </group>
        </menu>
    </item>
    <item android:title="@string/explore">
        <menu>
            <group
                android:id="@+id/explore"
                android:checkableBehavior="single"
                android:title="@string/explore">
                <item
                    android:id="@+id/pub_timeline"
                    android:title="@string/pub_timeline"
                    android:icon="@drawable/icon_timeline" />
                <item
                    android:id="@+id/trend"
                    android:title="@string/trend"
                    android:icon="@drawable/icon_trending"/>
                <item
                    android:id="@+id/blog"
                    android:title="@string/blog"
                    android:icon="@drawable/icon_github"/>
            </group>
        </menu>
    </item>
    <group android:id="@+id/settings">
        <item
            android:id="@id/settings"
            android:title="@string/settings"
            android:icon="@drawable/icon_settings"/>
    </group>
</menu>
