<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/navigation">
        <menu>
            <item
                android:id="@+id/search"
                android:title="@string/search"
                android:icon="@drawable/icon_search"/>
            <item
                android:id="@+id/bookmarks"
                android:title="@string/bookmarks"
                android:icon="@drawable/icon_bookmark"/>
        </menu>
    </item>
    <item android:title="@string/explore">
        <menu>
            <item
                android:id="@+id/pub_timeline"
                android:title="@string/pub_timeline"
                android:icon="@drawable/icon_timeline"/>
            <item
                android:id="@+id/trend"
                android:title="@string/trend"
                android:icon="@drawable/icon_trending"/>
            <item
                android:id="@+id/blog"
                android:title="@string/blog"
                android:icon="@drawable/icon_github"/>
        </menu>
    </item>
    <group android:id="@+id/settings">
        <item
            android:id="@id/settings"
            android:title="@string/settings"
            android:icon="@drawable/icon_settings"/>
    </group>
</menu>
