<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/refresh"
        android:icon="?attr/refreshIcon"
        android:showAsAction="always" />
    <item android:id="@+id/follow"
        android:showAsAction="always" />
    <item android:id="@+id/search"
        android:title="@string/search"
        android:showAsAction="always" />
    <item android:id="@+id/bookmarks"
        android:title="@string/bookmarks"
        android:showAsAction="always" />
    <item android:id="@+id/share"
        android:title="@string/share"
        android:showAsAction="never" />
    <item android:id="@+id/bookmark"
        android:title="@string/bookmark_user"
        android:showAsAction="never" />
    <item android:id="@+id/explore"
        android:title="@string/explore"
        android:showAsAction="never" />
    <item android:id="@+id/settings"
        android:title="@string/settings"
        android:showAsAction="never" />
</menu>
