<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/content_padding"
    android:paddingRight="@dimen/content_padding">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <com.gh4a.widget.StyleableTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/welcome"
        android:textColor="?attr/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <com.gh4a.widget.StyleableTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/introduction"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:text="@string/login"
        android:textColor="?android:attr/textColorPrimaryInverse"
        app:backgroundTint="?attr/colorAccent" />

    <com.gh4a.widget.StyleableTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/introduction_anon"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <com.gh4a.widget.StyleableTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/authenticating"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="?attr/colorAccent" />

        <ProgressBar
            style="?attr/indeterminateProgressStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:indeterminate="true"
            android:visibility="visible" />

    </LinearLayout>

</FrameLayout>
